@@ -23,4 +23,9 @@ Version 2.2-unreleased
 * implemented parameter `--stats' to display information on runtime and
   memory consumption (the latter uses `ps' and does not work under Cygwin)
 
-\nSee file ChangeLog <http://service-technology.org/files/wendy/ChangeLog> for\ncomplete version history.\n
+* `--verbose' is passed to LoLA
+
+
+See file ChangeLog <http://service-technology.org/files/wendy/ChangeLog> for
+complete version history.
+
